tests/fixtures/negative/007_unterminated_regex.js
// Expected error: unterminated regex literal
var re = /abc;
